--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,10 +14,92 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.more {
+}
+
+.button-gradient {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 300px;
+  height: 64px;
+
+  font-size: 16px;
+}
+
+.button-gradient-disabled {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 300px;
+  height: 64px;
+  font-size: 16px;
+}
+
+.button-gradient-disabled::before {
+  content: "";
+  position: absolute;
+  background: gray;
+  padding: 2px;
+  inset: 0;
+  border-radius: 9999px;
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+
+.button-gradient::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(to right, #ff7878, #f7e96c);
+  padding: 2px;
+  inset: 0;
+  border-radius: 9999px;
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+
+.ornaments-gradient {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 140px;
+  height: 140px;
+  font-size: 16px;
+}
+
+.ornaments-gradient::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(to right, #ff7878, #f7e96c);
+  padding: 2px;
+  inset: 0;
+  border-radius: 30px;
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-nanum-pen-script), Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
